--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 
 <body>
   <header id="header">
+    <div id="logo-container">
     <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/product-landing-page-logo.png"
       alt="company logo" id="header-img" />
+    </div>
     <nav id="nav-bar">
       <ul>
         <li><a href="#features" class="nav-link">Features</a></li>
@@ -25,11 +27,11 @@
     </nav>
   </header>
   <main>
-    <section>
+    <section id="order">
       <h1>Handcrafted, home-made masterpieces</h1>
       <form id="form" action="https://www.freecodecamp.com/email-submit">
         <label><input type="email" id="email" placeholder="Enter your email address" required /></label>
-        <input type="submit" value="Get started" id="submit" />
+        <input type="submit" value="GET STARTED" id="submit" />
       </form>
     </section>
     <section id="features">
@@ -62,7 +64,7 @@
       </div>
     </section>
     <section>
-      <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/y8Yv4pnO7qc?controls=0"
+      <iframe src="https://www.youtube-nocookie.com/embed/y8Yv4pnO7qc?controls=0"
         title="YouTube video player" frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen></iframe>
