finished features section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="style.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
   <script src="https://use.fontawesome.com/4e043bd22f.js"></script>
-  <script src="https://unpkg.com/spacingjs" defer></script>
+  <!-- <script src="https://unpkg.com/spacingjs" defer></script> -->
 </head>
 
 <body>
@@ -21,8 +21,8 @@
     <nav id="nav-bar">
       <ul>
         <li><a href="#features" class="nav-link">Features</a></li>
-        <li><a class="nav-link">How It works</a></li>
-        <li><a class="nav-link">Pricing</a></li>
+        <li><a href="#video" class="nav-link">How It works</a></li>
+        <li><a href="#price" class="nav-link">Pricing</a></li>
       </ul>
     </nav>
   </header>
@@ -34,42 +34,40 @@
         <input type="submit" value="GET STARTED" id="submit" />
       </form>
     </section>
-    <section id="features">
-      <div>
-        <div class="icon"><i class="fa fa-star fa-3x" aria-hidden="true"></i></div>
-        <div class="description">
+    <section class="features">
+
+        <div class="icon icon-1"><i class="fa fa-star fa-3x" aria-hidden="true"></i></div>
+        <div class="description description-1">
           <h2>Premium Materials</h2>
           <p>Our trombones use the shiniest brass which is sourced locally. This will increase the longevity of your
             purchase.</p>
         </div>
-      </div>
-      <div>
-        <div class="icon"><i class="fa fa-truck fa-3x" aria-hidden="true"></i></div>
-        <div class="decription">
+
+        <div class="icon icon-2"><i class="fa fa-truck fa-3x" aria-hidden="true"></i></div>
+        <div class="description description-2">
           <h2>Fast Shipping</h2>
           <p>We make sure you recieve your trombone as soon as we have finished making it. We also provide free returns
             if
             you are
             not satisfied.</p>
         </div>
-      </div>
-      <div>
-        <div class="icon"><i class="fa fa-battery-full fa-3x" aria-hidden="true"></i></div>
-        <div class="description">
+
+        <div class="icon icon-3"><i class="fa fa-battery-full fa-3x" aria-hidden="true"></i></div>
+        <div class="description description-3">
           <h2>Quality Assurance</h2>
           <p>For every purchase you make, we will ensure there are no damages or faults and we will check and test the
             pitch of your
             instrument.</p>
         </div>
-      </div>
+
     </section>
     <section>
-      <iframe src="https://www.youtube-nocookie.com/embed/y8Yv4pnO7qc?controls=0"
+      <iframe id="video" src="https://www.youtube-nocookie.com/embed/y8Yv4pnO7qc?controls=0"
         title="YouTube video player" frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen></iframe>
     </section>
-    <section>
+    <section id="price">
       <div class="product_card">
         <div class="card_header">TENOR TROMBONE</div>
         <div class="card_info">
