finished respponsibility on features and video section

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+
   <header id="header">
     <div id="logo-container">
     <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/product-landing-page-logo.png"
@@ -26,7 +27,9 @@
       </ul>
     </nav>
   </header>
+
   <main>
+
     <section id="order">
       <h1>Handcrafted, home-made masterpieces</h1>
       <form id="form" action="https://www.freecodecamp.com/email-submit">
@@ -34,9 +37,10 @@
         <input type="submit" value="GET STARTED" id="submit" />
       </form>
     </section>
+
     <section class="features">
 
-        <div class="icon icon-1"><i class="fa fa-star fa-3x" aria-hidden="true"></i></div>
+        <div class="icon icon-1"><i class="fa fa-diamond fa-3x" aria-hidden="true"></i></div>
         <div class="description description-1">
           <h2>Premium Materials</h2>
           <p>Our trombones use the shiniest brass which is sourced locally. This will increase the longevity of your
@@ -61,13 +65,20 @@
         </div>
 
     </section>
-    <section>
+
+    <section id="video-section">
+      <div id="video-align">
+      <div id="video-wrapper">
       <iframe id="video" src="https://www.youtube-nocookie.com/embed/y8Yv4pnO7qc?controls=0"
         title="YouTube video player" frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen></iframe>
+        </div>
+        </div>
     </section>
+
     <section id="price">
+
       <div class="product_card">
         <div class="card_header">TENOR TROMBONE</div>
         <div class="card_info">
@@ -79,6 +90,7 @@
         </div>
         <button type="button" class="card_button">Select</button>
       </div>
+
       <div class="product_card">
         <div class="card_header">BASS TROMBONE</div>
         <div class="card_info">
@@ -90,6 +102,7 @@
         </div>
         <button type="button" class="card_button">Select</button>
       </div>
+
       <div class="product_card">
         <div class="card_header">VALVE TROMBONE</div>
         <div class="card_info">
@@ -101,8 +114,11 @@
         </div>
         <button type="button" class="card_button">Select</button>
       </div>
+
     </section>
+
   </main>
+  
   <footer>
     <ul>
       <li>
