--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Product Landing Page</title>
   <link href="style.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700&display=swap" rel="stylesheet">
   <script src="https://use.fontawesome.com/4e043bd22f.js"></script>
   <!-- <script src="https://unpkg.com/spacingjs" defer></script> -->
 </head>
@@ -33,12 +33,12 @@
     <section id="order">
       <h1>Handcrafted, home-made masterpieces</h1>
       <form id="form" action="https://www.freecodecamp.com/email-submit">
-        <label><input type="email" id="email" placeholder="Enter your email address" required /></label>
+        <label><input type="email" id="email" name="email" placeholder="Enter your email address" required /></label>
         <input type="submit" value="GET STARTED" id="submit" />
       </form>
     </section>
 
-    <section class="features">
+    <section id="features" class="features">
 
         <div class="icon icon-1"><i class="fa fa-diamond fa-3x" aria-hidden="true"></i></div>
         <div class="description description-1">
@@ -80,9 +80,9 @@
     <section id="price">
 
       <div class="product_card">
-        <div class="card_header">TENOR TROMBONE</div>
+        <div class="card_header"><h2>TENOR TROMBONE<h2></div>
         <div class="card_info">
-          <h2>$600</h2>
+          <h3>$600</h3>
           <p>Lorem ipsum.</p>
           <p>Lorem ipsum.</p>
           <p>Lorem ipsum dolor.</p>
@@ -92,9 +92,9 @@
       </div>
 
       <div class="product_card">
-        <div class="card_header">BASS TROMBONE</div>
+        <div class="card_header"><h2>BASS TROMBONE<h2></div>
         <div class="card_info">
-          <h2>$900</h2>
+          <h3>$900</h3>
           <p>Lorem ipsum.</p>
           <p>Lorem ipsum.</p>
           <p>Lorem ipsum dolor.</p>
@@ -104,9 +104,9 @@
       </div>
 
       <div class="product_card">
-        <div class="card_header">VALVE TROMBONE</div>
+        <div class="card_header"><h2>VALVE TROMBONE<h2></div>
         <div class="card_info">
-          <h2>$1200</h2>
+          <h3>$1200</h3>
           <p>Plays similar to a Trumpet</p>
           <p>Great for Jazz Bands</p>
           <p>Lorem ipsum dolor.</p>
@@ -120,6 +120,7 @@
   </main>
   
   <footer>
+    <div>
     <ul>
       <li>
         <a>Privacy</a>
@@ -128,6 +129,7 @@
       <li><a>Contact</a></li>
     </ul>
     <p>Copyright 2016, Original Trombones</p>
+    </div>
   </footer>
 
 
