--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
   <header id="header">
     <div id="logo-container">
-    <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/product-landing-page-logo.png"
-      alt="company logo" id="header-img" />
+      <img src="https://cdn.freecodecamp.org/testable-projects-fcc/images/product-landing-page-logo.png"
+        alt="company logo" id="header-img" />
     </div>
     <nav id="nav-bar">
       <ul>
@@ -40,47 +40,49 @@
 
     <section id="features" class="features">
 
-        <div class="icon icon-1"><i class="fa fa-diamond fa-3x" aria-hidden="true"></i></div>
-        <div class="description description-1">
-          <h2>Premium Materials</h2>
-          <p>Our trombones use the shiniest brass which is sourced locally. This will increase the longevity of your
-            purchase.</p>
-        </div>
+      <div class="icon icon-1"><i class="fa fa-diamond fa-3x" aria-hidden="true"></i></div>
+      <div class="description description-1">
+        <h2>Premium Materials</h2>
+        <p>Our trombones use the shiniest brass which is sourced locally. This will increase the longevity of your
+          purchase.</p>
+      </div>
 
-        <div class="icon icon-2"><i class="fa fa-truck fa-3x" aria-hidden="true"></i></div>
-        <div class="description description-2">
-          <h2>Fast Shipping</h2>
-          <p>We make sure you recieve your trombone as soon as we have finished making it. We also provide free returns
-            if
-            you are
-            not satisfied.</p>
-        </div>
+      <div class="icon icon-2"><i class="fa fa-truck fa-3x" aria-hidden="true"></i></div>
+      <div class="description description-2">
+        <h2>Fast Shipping</h2>
+        <p>We make sure you recieve your trombone as soon as we have finished making it. We also provide free returns
+          if
+          you are
+          not satisfied.</p>
+      </div>
 
-        <div class="icon icon-3"><i class="fa fa-battery-full fa-3x" aria-hidden="true"></i></div>
-        <div class="description description-3">
-          <h2>Quality Assurance</h2>
-          <p>For every purchase you make, we will ensure there are no damages or faults and we will check and test the
-            pitch of your
-            instrument.</p>
-        </div>
+      <div class="icon icon-3"><i class="fa fa-battery-full fa-3x" aria-hidden="true"></i></div>
+      <div class="description description-3">
+        <h2>Quality Assurance</h2>
+        <p>For every purchase you make, we will ensure there are no damages or faults and we will check and test the
+          pitch of your
+          instrument.</p>
+      </div>
 
     </section>
 
     <section id="video-section">
       <div id="video-align">
-      <div id="video-wrapper">
-      <iframe id="video" src="https://www.youtube-nocookie.com/embed/y8Yv4pnO7qc?controls=0"
-        title="YouTube video player" frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen></iframe>
+        <div id="video-wrapper">
+          <iframe id="video" src="https://www.youtube-nocookie.com/embed/y8Yv4pnO7qc?controls=0"
+            title="YouTube video player"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
         </div>
-        </div>
+      </div>
     </section>
 
     <section id="price">
 
       <div class="product_card">
-        <div class="card_header"><h2>TENOR TROMBONE<h2></div>
+        <div class="card_header">
+          <h2>TENOR TROMBONE</h2>
+        </div>
         <div class="card_info">
           <h3>$600</h3>
           <p>Lorem ipsum.</p>
@@ -92,7 +94,9 @@
       </div>
 
       <div class="product_card">
-        <div class="card_header"><h2>BASS TROMBONE<h2></div>
+        <div class="card_header">
+          <h2>BASS TROMBONE</h2>
+        </div>
         <div class="card_info">
           <h3>$900</h3>
           <p>Lorem ipsum.</p>
@@ -104,7 +108,9 @@
       </div>
 
       <div class="product_card">
-        <div class="card_header"><h2>VALVE TROMBONE<h2></div>
+        <div class="card_header">
+          <h2>VALVE TROMBONE</h2>
+        </div>
         <div class="card_info">
           <h3>$1200</h3>
           <p>Plays similar to a Trumpet</p>
@@ -118,17 +124,15 @@
     </section>
 
   </main>
-  
+
   <footer>
     <div>
-    <ul>
-      <li>
-        <a>Privacy</a>
-      </li>
-      <li><a>Terms</a></li>
-      <li><a>Contact</a></li>
-    </ul>
-    <p>Copyright 2016, Original Trombones</p>
+      <ul>
+        <li><a href="#">Privacy</a></li>
+        <li><a href="#">Terms</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+      <p>Copyright 2016, Original Trombones</p>
     </div>
   </footer>
 
